tests/context-tests/expectations/fail/empty_without_type_variables.orb.expectation
#Contains
Expected Type Variables after Context declaration